# Server

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/minecraft/network/: endian.hpp  network_handler.hpp  type.hpp
include/minecraft/serialization/: endian.hpp  type.hpp
src/network/: _placeholder.cpp
tests/: CMakeLists.txt  network_type.cpp
